--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
     background-image: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.7)),url(https://www.gucci.com/wallpapers/garden/laptop.jpg);
     background-position: center;
     background-size: cover;
-    padding-left: 8%;
-    padding-right: 8%;
     box-sizing: border-box;
 }
 
@@ -67,14 +65,17 @@ nav ul li a{
 }
 
 .row{
+    
+    width: 100%;
     display:flex;
     height: 88%;
-    background-color: rgb(0, 0, 0);
+    
     align-items: center;
 }
 
 .col{
     flex-basis: 50%;
+    z-index: 2;
 }
 
 section{
@@ -111,13 +112,14 @@ p{
 
 button{
     width: 180px;
-    color: #000;
+    color: rgb(255, 255, 255);
     font-size: 12px;
     padding: 12px 0;
-    background: #fff;
+    background: rgba(255, 255, 255, 0);
     border-radius: 20px;
     outline: none;
     margin-top: 30px;
+    border-color: white white;
 }
 
 .card{
@@ -132,6 +134,7 @@ button{
     
     background-position: center;
     background-size: cover;
+    
 }
 
 
@@ -160,3 +163,31 @@ button{
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .video-wrapper {
+    /* Telling our absolute positioned video to 
+    be relative to this element */
+    position: relative;
+  
+    width: 100%;
+    height: 100%;
+  
+    /* Will not allow the video to overflow the 
+    container */
+    overflow: hidden;
+  
+    /* Centering the container's content vertically 
+    and horizontally */
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    
+  }
